--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,10 +90,10 @@ test: &test
         echo "2. Copying paper stuffs for Open Bases PDF..."
         echo "docker cp ./paper/. openbases:/data/"
         docker cp ./paper/. openbases:/data/
-        echo "3. Validating paper and bibliography"
-        echo "docker exec openbases ob-validate paper --infile /data/paper.md"
-        docker exec openbases ob-validate paper --infile /data/paper.md "${OPENBASES_VALIDATE_ARGS}"
-        echo "4. Stopping openbases validator..."
+        # echo "3. Validating paper and bibliography"
+        # echo "docker exec openbases ob-validate paper --infile /data/paper.md"
+        # docker exec openbases ob-validate paper --infile /data/paper.md "${OPENBASES_VALIDATE_ARGS}"
+        echo "3. Stopping openbases validator..."
         docker stop openbases
 
 pdf: &pdf
